updated su-goals and su-risk pages to use no dialog versions

--- a/src/behaviors/su-resize-behavior.html
+++ b/src/behaviors/su-resize-behavior.html
@@ -116,9 +116,11 @@
         };
 
         //temp for testing pages
-        if(this.page==="test-main"){
-
-          console.log('running test-main code');
+        if(
+            this.page === "su-goals"
+            || this.page === "su-care-review"
+            || this.page === "test-main"
+          ){
           //orig width 640px
           //fab styles
 
