--- a/src/pages/care-plan/su-care-review-multi-view.html
+++ b/src/pages/care-plan/su-care-review-multi-view.html
@@ -12,9 +12,7 @@
 <link rel="import" href="../../elements/media-queries/media-queries.html" />
 <link rel="import" href="../../elements/guuey-truncate/guuey-truncate.html" />
 
-<link rel="import" href="../../behaviors/multi-view-resize-behavior.html" />
 <link rel="import" href="../../behaviors/multi-view-grid-behavior.html" />
-<link rel="import" href="../../behaviors/guuey-dialog-resize-behavior.html" />
 
 <link rel="import" href="../../styles/common-styles.html" />
 
@@ -107,9 +105,7 @@
       },
 
       behaviors:[
-        Polymer.multiViewResizeBehavior,
-        Polymer.multiViewGridBehavior,
-        Polymer.guueyDialogResizeBehavior
+        Polymer.multiViewGridBehavior
       ],
 
       toggleEditModal: function(e) {
