updated su-risk page to work with dialogless features

--- a/src/behaviors/su-resize-behavior.html
+++ b/src/behaviors/su-resize-behavior.html
@@ -119,6 +119,7 @@
         if(
             this.page === "su-goals"
             || this.page === "su-care-review"
+            || this.page === "su-risk"
             || this.page === "test-main"
           ){
           //orig width 640px
