--- a/src/my-app.html
+++ b/src/my-app.html
@@ -758,9 +758,20 @@
             page="[[page]]"
             patient="[[patient]]"
             home="[[home]]"
-            user="{{user}}"
-            name="su-risk">
+            name="su-risk"
+            param="[[param]]">
           </su-risk>
+          <su-risk-edit
+            user-uid="[[userUid]]"
+            current-page="[[currentPage]]"
+            current-cat="[[currentCat]]"
+            intended-cat="[[intendedCat]]"
+            page="[[page]]"
+            patient="[[patient]]"
+            home="[[home]]"
+            name="su-risk-edit"
+            param="[[param]]">
+          </su-risk-edit>
           <su-create
             user-uid="[[userUid]]"
             current-page="[[currentPage]]"
